--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "rm -rf build/ && tsc -p .",
+    "image": "docker build -t alexeigontarcyber/cyber_bot:0.9.0 .",
     "bot": "ts-node src/TemperatureBot.ts",
-    "metrics": "ts-node src/MetricsServer.ts",
-    "fill": "ts-node src/PutMetrics.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "metrics": "ts-node src/MetricsServer.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,16 +17,12 @@
     "@types/lodash": "^4.14.134",
     "@types/mongodb": "^3.1.28",
     "@types/node": "^12.0.10",
-    "@types/node-fetch": "^2.3.7",
     "@types/node-telegram-bot-api": "^0.31.0",
-    "@types/pg": "^7.4.14",
     "express": "^4.17.1",
     "jsonschema": "^1.2.4",
     "lodash": "^4.17.11",
     "mongodb": "^3.2.7",
-    "node-fetch": "^2.6.0",
     "node-telegram-bot-api": "^0.30.0",
-    "pg": "^7.11.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   }
