--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf build/ && tsc -p .",
-    "image": "docker build -t alexeigontarcyber/cyber_bot:0.9.0 .",
+    "image": "docker build -t alexeigontarcyber/cyber_bot:0.9.2 .",
     "bot": "ts-node src/TemperatureBot.ts",
-    "metrics": "ts-node src/MetricsServer.ts"
+    "metrics": "ts-node src/Main.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,8 +22,13 @@
     "jsonschema": "^1.2.4",
     "lodash": "^4.17.11",
     "mongodb": "^3.2.7",
+    "mqtt": "^3.0.0",
     "node-telegram-bot-api": "^0.30.0",
+    "redis": "^2.8.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
+  },
+  "devDependencies": {
+    "@types/redis": "^2.8.13"
   }
 }
