--- a/server/package.json
+++ b/server/package.json
@@ -5,28 +5,34 @@
   "main": "index.js",
   "scripts": {
     "compile": "rm -rf build/ && tsc -p .",
-    "build": "docker build -t alexeigontarcyber/cyber_bot:0.9.3 .",
-    "push": "docker push alexeigontarcyber/cyber_bot:0.9.3",
+    "build": "docker build -t alexeigontarcyber/cyber_bot:0.9.4 .",
+    "push": "docker push alexeigontarcyber/cyber_bot:0.9.4",
     "start": "ts-node src/Main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.17.0",
-    "@types/lodash": "^4.14.134",
+    "@types/lodash": "^4.14.136",
+    "@types/mocha": "^5.2.7",
     "@types/mongodb": "^3.1.28",
-    "@types/node": "^12.0.10",
+    "@types/node": "^12.6.3",
     "@types/node-telegram-bot-api": "^0.31.0",
+    "@types/sinon": "^7.0.13",
+    "chai": "^4.2.0",
     "express": "^4.17.1",
     "jsonschema": "^1.2.4",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.14",
+    "mocha": "^6.1.4",
     "mongodb": "^3.2.7",
     "mqtt": "^3.0.0",
     "node-telegram-bot-api": "^0.30.0",
     "redis": "^2.8.0",
+    "sinon": "^7.3.2",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "@types/redis": "^2.8.13"
