--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "compile": "rm -rf build/ && tsc -p .",
     "build": "docker build -t alexeigontarcyber/cyber_bot:0.9.5 .",
     "push": "docker push alexeigontarcyber/cyber_bot:0.9.5",
+    "test": "mocha -r ts-node/register \"src/**/*.spec.ts\"",
     "start": "ts-node src/Main.ts"
   },
   "keywords": [],
