--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "rm -rf build/ && tsc -p .",
+    "compile": "rm -rf build/ && tsc -p ./tsconfig.prod.json",
     "build": "npm run test && docker build -t alexeigontarcyber/cyber_bot:0.9.6 .",
     "push": "docker push alexeigontarcyber/cyber_bot:0.9.6",
     "test": "mocha -r ts-node/register \"src/**/*.spec.ts\"",
@@ -14,24 +14,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^4.1.7",
+    "@types/chai": "^4.2.0",
     "@types/express": "^4.17.0",
     "@types/lodash": "^4.14.136",
     "@types/mocha": "^5.2.7",
-    "@types/mongodb": "^3.1.28",
-    "@types/node": "^12.6.3",
+    "@types/mongodb": "^3.2.2",
+    "@types/node": "^12.7.1",
     "@types/node-telegram-bot-api": "^0.31.0",
     "@types/sinon": "^7.0.13",
     "chai": "^4.2.0",
     "express": "^4.17.1",
     "jsonschema": "^1.2.4",
-    "lodash": "^4.17.14",
-    "mocha": "^6.1.4",
-    "mongodb": "^3.2.7",
+    "lodash": "^4.17.15",
+    "mocha": "^6.2.0",
+    "mongodb": "^3.3.0",
     "mqtt": "^3.0.0",
     "node-telegram-bot-api": "^0.30.0",
     "redis": "^2.8.0",
-    "sinon": "^7.3.2",
+    "sinon": "^7.4.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
