--- a/server/build.gradle
+++ b/server/build.gradle
@@ -9,6 +9,7 @@ repositories {
 }
 
 dependencies {
+    compile 'io.github.microutils:kotlin-logging:1.7.6'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.jetbrains.kotlin:kotlin-reflect"
     compile "org.springframework.boot:spring-boot-starter:2.1.7.RELEASE"
