--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id "com.avast.gradle.docker-compose" version '0.9.0'
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
     id "org.springframework.boot" version "2.1.7.RELEASE"
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.41"
@@ -8,12 +9,23 @@ repositories {
     mavenCentral()
 }
 
+dockerCompose {
+    botEnv {
+        projectName = 'tg-bot-env'
+        dockerComposeWorkingDirectory = "${projectDir}/src/main/docker-compose-env"
+    }
+}
+
 dependencies {
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.1'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.9'
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9'
+    compile "org.springframework.boot:spring-boot-starter:2.1.7.RELEASE"
+    compile 'org.springframework.boot:spring-boot-starter-data-redis:2.1.7.RELEASE'
     compile 'com.google.guava:guava:28.0-jre'
     compile 'io.github.microutils:kotlin-logging:1.7.6'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.jetbrains.kotlin:kotlin-reflect"
-    compile "org.springframework.boot:spring-boot-starter:2.1.7.RELEASE"
     compile 'com.github.pengrad:java-telegram-bot-api:4.4.0'
 }
 
